Fixes rendering issue on iOS devices caused by webkit SVG scaling bug

--- a/public/styles.scss
+++ b/public/styles.scss
@@ -308,6 +308,7 @@ header {
     svg {
       width: 100%;
       height: auto;
+      max-height: 100%;
 
       .axis path, .axis line {
         fill: none;
